[workspace]
resolver = "2"

members = [
  "logger",
  "net/signaling",
  "net/runtime",
  "net/websocket",
  "net/http",
  "fs",
  "crockford",
  "holy-array"
, "bindings/c"]

[workspace.dependencies]
pawkit-net-signaling.path = "./net/signaling"
pawkit-net-websocket.path = "./net/websocket"
pawkit-net-http.path = "./net/htp"
pawkit-logger.path = "./logger"
pawkit-fs.path = "./fs"
pawkit-crockford.path = "./crockford"
pawkit-holy-array.path = "./holy-array"

tokio-tungstenite.version = "0.26.2"
tokio-tungstenite.features = ["native-tls"]

serde.version = "1.0.219"
serde.features = ["serde_derive"]

web-sys.version = "0.3.77"
web-sys.features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "IdbFactory",
  "IdbDatabase",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbCursorWithValue",
  "Window",
  "Response"
]

tokio.version = "1.45.0"
tokio.features = ["sync", "rt", "macros"]

just-webrtc = "0.2.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
futures-util = "0.3.31"
chrono = "0.4.41"

serde_json = "1.0.140"
ciborium = "0.2.2"

anyhow = "1.0.98"
bytes = "1.10.1"

reqwest = "0.12.15"
