[workspace]
resolver = "2"

members = [
  "logger",
  "net/signaling",
  "net/runtime",
  "net/websocket",
  "net/http",
  "fs",
  "crockford",
  "holy-array",
  "futures",
  "input",
  "bitarray",
  "bindings/c",
  "bindings/lua",
  "bindings/godot",
]

[workspace.dependencies]
pawkit-futures.path = "./futures"
pawkit-futures.version = "0.1.2"

pawkit-net-signaling.path = "./net/signaling"
pawkit-net-signaling.version = "0.1.2"

pawkit-net-websocket.path = "./net/websocket"
pawkit-net-websocket.version = "0.1.2"

pawkit-net.path = "./net/runtime"
pawkit-net.version = "0.1.2"

pawkit-net-http.path = "./net/htp"
pawkit-net-http.version = "0.1.2"

pawkit-logger.path = "./logger"
pawkit-logger.version = "0.1.2"

pawkit-fs.path = "./fs"
pawkit-fs.version = "0.1.2"

pawkit-crockford.path = "./crockford"
pawkit-crockford.version = "0.1.2"

pawkit-holy-array.path = "./holy-array"
pawkit-holy-array.version = "0.1.2"

pawkit-bitarray.path = "./bitarray"
pawkit-bitarray.version = "0.1.2"

pawkit-input.path = "./input"
pawkit-input.version = "0.1.2"

tokio-native-tls = "0.3.1"
num_enum = "0.7.4"
serde.version = "1.0.219"
serde.features = ["serde_derive"]
just-webrtc = "0.2.0"
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
futures-util = "0.3.31"
chrono = "0.4.42"
serde_json = "1.0.143"
ciborium = "0.2.2"
anyhow = "1.0.99"
bytes = "1.10.1"
reqwest = "0.12.23"
zip = "5.1.0"

godot.version = "0.3.5"
godot.features = ["api-4-4", "serde"]

tokio-tungstenite.version = "0.27.0"
tokio-tungstenite.features = ["native-tls"]

web-sys.version = "0.3.78"
web-sys.features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "IdbFactory",
  "IdbDatabase",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbCursorWithValue",
  "Window",
  "Response"
]

tokio.version = "1.47.1"
tokio.features = ["sync", "rt", "macros"]

mlua.version = "0.11.3"
mlua.features = ["lua54", "module", "serialize"] 
