[workspace]
resolver = "2"

members = [
  "logger",
  "interner",
  "net/signaling",
  "net/runtime",
  "net/websocket",
  "net/http",
  "fs",
  "crockford",
  "holy-array",
  "input",
  "bindings/c",
  "bindings/lua",
  "bindings/godot",
]

[workspace.dependencies]
pawkit-net-signaling.path = "./net/signaling"
pawkit-net-signaling.version = "0.1.10"

pawkit-net-websocket.path = "./net/websocket"
pawkit-net-websocket.version = "0.1.10"

pawkit-net.path = "./net/runtime"
pawkit-net.version = "0.1.10"

pawkit-net-http.path = "./net/htp"
pawkit-net-http.version = "0.1.10"

pawkit-logger.path = "./logger"
pawkit-logger.version = "0.1.10"

pawkit-fs.path = "./fs"
pawkit-fs.version = "0.1.10"

pawkit-crockford.path = "./crockford"
pawkit-crockford.version = "0.1.10"

pawkit-holy-array.path = "./holy-array"
pawkit-holy-array.version = "0.1.10"

pawkit-input.path = "./input"
pawkit-input.version = "0.1.10"

pawkit-interner.path = "./interner"
pawkit-interner.version = "0.1.10"

tokio-native-tls = "0.3.1"
num_enum = "0.7.5"
serde.version = "1.0.228"
serde.features = ["serde_derive"]
just-webrtc = "0.2.0"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
futures-util = "0.3.31"
chrono = "0.4.42"
serde_json = "1.0.148"
ciborium = "0.2.2"
anyhow = "1.0.100"
bytes = "1.11.0"
reqwest = "0.12.28"
zip = "7.0.0"
thiserror = "2.0.17"
dashmap = "6.1.0"
 
godot.version = "0.4.5"
godot.features = ["api-4-4", "serde"]

tokio-tungstenite.version = "0.28.0"
tokio-tungstenite.features = ["native-tls"]

web-sys.version = "0.3.83"
web-sys.features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "IdbFactory",
  "IdbDatabase",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbCursorWithValue",
  "Window",
  "Response"
]

tokio.version = "1.48.0"
tokio.features = ["sync", "rt", "macros"]

mlua.version = "0.11.5"
mlua.features = ["lua54", "module", "serialize"] 

[package]
name = "pawkit"
version = "0.1.10"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit"
description = "PawKit is a mninimal game engine toolkit, written in Rust, with support for C, C++, Godot, and Lua."

[dependencies]
pawkit-logger.workspace = true
pawkit-net.workspace = true
pawkit-input.workspace = true
pawkit-interner.workspace = true
pawkit-fs.workspace = true

pawkit-crockford.workspace = true
pawkit-crockford.optional = true

pawkit-holy-array.workspace = true
pawkit-holy-array.optional = true

[features]
internal_libraries = ["pawkit-crockford", "pawkit-holy-array"]
