[package]
name = "pawkit-crockford"
version = "0.1.11"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/crockford"
description = "A small library for serializing to/from Crockford Base32"

[dependencies]
rand = "0.9.2"
