[package]
name = "pawkit-fs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
homepage = "htpps://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/fs"
description = "PawKit's filesystem module"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
pawkit-logger.workspace = true
serde.workspace = true
