[package]
name = "pawkit-fs"
version = "0.1.10"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/fs"
description = "PawKit's filesystem module"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
pawkit-logger.workspace = true
thiserror.workspace = true

zip.workspace = true
