[package]
name = "pawkit-futures"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/futures"
description = "Future utils for PawKit."

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio.features = ["rt-multi-thread"]
