[package]
name = "pawkit-input"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/bitarray"
description = "PawKit's input module"

[dependencies]
pawkit-bitarray.workspace = true
pawkit-holy-array.workspace = true

num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
