[package]
name = "pawkit-input"
version = "0.1.11"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/bitarray"
description = "PawKit's input module"

[dependencies]
pawkit-holy-array.workspace = true
pawkit-interner.workspace = true
pawkit-crockford.workspace = true

num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bitvec = "1.0.1"
im = "15.1.0"
