[package]
name = "pawkit-interner"
version = "0.1.11"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/interner"
description = "Multithreaded string interner for PawKit"

[dependencies]
dashmap.workspace = true
serde.workspace = true
