[package]
name = "pawkit-logger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono.workspace = true
