[package]
name = "pawkit-logger"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/logger"
description = "PawKit's logging module"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono.workspace = true
