[package]
name = "pawkit-c"
version = "0.1.10"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/bindings/c"
description = "PawKit's C(++) bindings"

[lib]
name = "pawkit" 
crate-type = ["staticlib", "cdylib"]

[dependencies]
pawkit-logger.workspace = true
pawkit-net.workspace = true
pawkit-input.workspace = true
pawkit-fs.workspace = true
pawkit-interner.workspace = true

serde.workspace = true
num_enum.workspace = true
zip.workspace = true
