[package]
name = "pawkit-lua"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/bindings/lua"
description = "Lua bindings for pawkit"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pawkit-logger.workspace = true
pawkit-net.workspace = true
pawkit-net-signaling.workspace = true
pawkit-input.workspace = true
pawkit-fs.workspace = true

mlua.workspace = true
