[package]
name = "pawkit-net-http"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
