[package]
name = "pawkit-net-http"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/net/http"
description = "A cross platform wrapper for HTTP requests"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
