[package]
name = "pawkit-net"
version = "0.1.12"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/net/runtime"
description = "PawKit's networking module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pawkit-net-signaling.workspace = true
pawkit-holy-array.workspace = true
pawkit-logger.workspace = true

anyhow.workspace = true
bytes.workspace = true
just-webrtc.workspace = true
tokio.workspace = true
wasm-bindgen-futures.workspace = true
futures-util.workspace = true
