[package]
name = "pawkit-net-signaling"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pawkit-net-websocket.workspace = true
serde.workspace = true
tokio.workspace = true
pawkit-logger.workspace = true
futures-util.workspace = true
serde_json.workspace = true
ciborium.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite.workspace = true
tokio.workspace = true
tokio.features = ["rt-multi-thread"]
