[package]
name = "pawkit-net-signaling"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/net/signaling"
description = "Provides the signaling functionality for PawKit's WebRTC networking."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pawkit-net-websocket.workspace = true
pawkit-holy-array.workspace = true
pawkit-logger.workspace = true
pawkit-crockford.workspace = true
pawkit-futures.workspace = true

serde.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde_json.workspace = true
ciborium.workspace = true
just-webrtc.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite.workspace = true
tokio.workspace = true
tokio.features = ["rt-multi-thread"]
tokio-native-tls.workspace = true
