[package]
name = "pawkit-net-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
pawkit-logger.workspace = true
tokio.workspace = true
futures-util.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
