[package]
name = "pawkit-net-websocket"
version = "0.1.10"
edition = "2024"
license = "MPL-2.0"
homepage = "https://teamvulpine.com"
repository = "https://github.com/TeamVulpine/PawKit/tree/main/net/websocket"
description = "A websocket wrapper for PawKit"

[dependencies]
pawkit-logger.workspace = true
tokio.workspace = true
futures-util.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
